@@ -286,10 +286,13 @@ run(opts_t* opts, oml_mps_t* oml_mps)
 int
 main(int argc, const char *argv[])
 {
-  omlc_init(argv[0], &argc, argv, NULL);
   char str[50] = "int:";
   char radiotap_dev[68] = "/proc/sys/net/";
   FILE *radio_dev_type;
+  char *progname = strdup(argv[0]), *p = progname;
+  do *p = (*p == '-') ? '_' : *p; while (*p++);
+
+  omlc_init(progname, &argc, argv, NULL);
 
   // parsing command line arguments
   poptContext optCon = poptGetContext(NULL, argc, argv, options, 0);
